--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url("hortencia.png");
+            background-image: url("/hortencia.png");
             background-size: cover;
             background-position: center;
             filter: blur(2px);
@@ -72,7 +72,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image:url("Fondo.png");
+            background-image:url("/Fondo.png");
             background-size: cover;
             display: flex;
             flex-direction: column;
@@ -548,4 +548,5 @@
         });
     </script>
 </body>
+
 </html>
