--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@
 
         <section class="love-message-section">
             <div class="love-message-content">
-                <h2>Mi Amiga Aracey 🏵</h2>
-                <p>Espero que este pequeño detalle te recuerde lo increíblemente especial que eres. Y como Hiba a dejar a Ami amiga sin sus flores este dia jajaja 😅talvez ya te regalaron yo que se.Pero igual gracias por ser tú,por tu paciencia,por tu cariño y por cada instante compartido aunque sea por chat 😅.</p>
+                <h2>Mi Amiga Aracely 🏵</h2>
+                <p>Espero que este pequeño detalle te recuerde lo increíblemente especial que eres. Y como Hiba a dejar a Ami amiga sin sus flores este dia jajaja aunque seaan digitales 😅y talvez ya te regalaron yo que se.Pero igual gracias por ser tú...,por tu paciencia,por tu cariño y por cada instante compartido aunque sea por una pantalla 😅.</p>
                 <img src="gato.png" alt="Flor amarilla" class="footer-image">
             </div>
         </section>
@@ -550,4 +550,5 @@
 </body>
 
 </html>
+
 
