--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
     <div class="main-content animation-paused" id="mainContainer">
         
-        <h1 class="main-title">Feliz 21 de septiembre🌼</h1>
+        <h1 class="main-title">Feliz 21 de septiembre<br>🌼</h1>
 
         <div class="sunflower-container">
             <div class="sunflower">
@@ -550,5 +550,6 @@
 </body>
 
 </html>
+
 
 
