--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 <body>
 
     <div class="start-screen" id="startScreen">
-        <h1 class="start-title">Un regalo para ti 😅</h1>
+        <h1 class="start-title">Un regalo para ti<br>😅</h1>
         <button class="start-button" id="startBtn">Abrir</button>
     </div>
 
@@ -479,7 +479,7 @@
         <section class="love-message-section">
             <div class="love-message-content">
                 <h2>Mi Amiga Aracely 🏵</h2>
-                <p>Espero que este pequeño detalle te recuerde lo increíblemente especial que eres. Y como Hiba a dejar a Ami amiga sin sus flores este dia jajaja aunque seaan digitales 😅y talvez ya te regalaron yo que se.Pero igual gracias por ser tú...,por tu paciencia,por tu cariño y por cada instante compartido aunque sea por una pantalla 😅.</p>
+                <p>Espero que este pequeño detalle te recuerde lo increíblemente especial que eres. Y como Hiba a dejar a Ami amiga sin sus flores este dia jajaja aunque seaan digitales 😅y talvez ya te regalaron yo que se.Pero igual gracias por ser tú...,por tu paciencia,por tu cariño y por cada instante compartido aunque sea por una pantalla 😅.<br>Psdt. Espero te guste la música 😅</p>
                 <img src="gato.png" alt="Flor amarilla" class="footer-image">
             </div>
         </section>
@@ -550,6 +550,7 @@
 </body>
 
 </html>
+
 
 
 
