--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         .main-title {
             font-family: "Lilita One", sans-serif;
-            font-size: clamp(2.5rem, 7vw, 4rem);
+            font-size: clamp(2.5rem, 8vw, 4rem);
             background:linear-gradient(150deg,rgb(139,0,139), rgb(255,69,0), #ffbb00);
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -479,7 +479,7 @@
         <section class="love-message-section">
             <div class="love-message-content">
                 <h2>Mi Amiga Aracely 🏵</h2>
-                <p>Espero que este pequeño detalle te recuerde lo increíblemente especial que eres. Y como Hiba a dejar a Ami amiga sin sus flores este dia jajaja aunque seaan digitales 😅y talvez ya te regalaron yo que se.Pero igual gracias por ser tú...,por tu paciencia,por tu cariño y por cada instante compartido aunque sea por una pantalla 😅.<br>Psdt. Espero te guste la música 😅</p>
+                <p>Espero que este pequeño detalle te recuerde lo increíblemente especial que eres. Y como Hiba a dejar a Ami amiga sin sus flores este dia jajaja aunque seaan digitales 😅y talvez ya te regalaron yo que se.Pero igual gracias por ser tú...,por tu paciencia,por tu cariño y por cada instante compartido aunque sea por una pantalla 🫣.<br>Psdt.Espero te guste la música☺️</p>
                 <img src="gato.png" alt="Flor amarilla" class="footer-image">
             </div>
         </section>
@@ -550,6 +550,7 @@
 </body>
 
 </html>
+
 
 
 
