--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             text-align: center;
-            margin-bottom: 2rem;
+            margin-bottom: 10px;
             opacity: 0;
             animation: fadeIn 2s forwards 0.5s;
         }
@@ -550,6 +550,7 @@
 </body>
 
 </html>
+
 
 
 
